# rulesxp

./: README.md  TESTING_GAPS.md  TODO.md  parser_check  test_errors.txt
_experimental/: COMPILER_VALIDATION.md  CPS_ARCHITECTURE.md  Cargo.toml  DOIT  MACROS_R7RS_ANALYSIS.md  MACRO_REFACTOR_PLAN.md  MACRO_SYSTEM_RESTRICTIONS.md  REFACTOR_PROPOSALS.md  TESTING_GAPS.md  TODO.md  TRADEOFFS.md  advanced_benchmark.scm  basic_benchmark.scm  benchmark_broken11111.scm  benchmark_example.scm  benchmark_intensive.scm  benchmark_ycombinator.scm  complex_benchmark.scm  debug_ab.scm  debug_call_f_only.scm  debug_call_first.scm  debug_case_lambda.scm  debug_case_lambda_pattern.scm  debug_cps.scm  debug_different_params.scm  debug_double_wrap.scm  debug_lambda_params.scm  debug_let_simple.scm  debug_minimal_nested.scm  debug_mutual_recursion.scm  debug_nested.scm  debug_quote.scm  debug_self_recursion.scm  debug_shadow.scm  debug_simple_ellipsis.scm  debug_single_lambda.scm  debug_test10.scm  debug_test5_subtest4.scm  debug_test8.scm  debug_test8_quoted.scm  (+79 more)
_experimental/prelude/: cps_functions.scm  cps_macros.scm  functions.scm  macros.scm
_experimental/src/: builtins.rs  compiler.rs  cps.rs  cps_builtins.rs  lib.rs  m2  macro_compiler.rs  macro_expander.rs  macro_matcher.rs  macros.rs  macros.rs2  macrosrunt  main.rs  morig  morigclean  parser.rs  processed_ast.rs  processed_env.rs  repl.rs  rewriteinprogress1  super_builtins.rs  super_vm.rs  test_closure_fix.rs  test_environment_sharing.rs  test_recursive_functions.rs  test_runner.rs  test_variadic.rs  value.rs  vm.rs
(+60 files in other folders)
