[package]
name = "samplescheme"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Performance optimization for string interning in release builds
release-optimizations = ["string-interner/inline-more"]

[dependencies]
nom = "7.1.3"
rustyline = "13.0.0"
bumpalo = "3.14.0"
smallvec = "1.11"

[dependencies.string-interner]
version = "0.17.0"
default-features = false
features = ["std", "backends"]


[profile.release]
features = ["release-optimizations"]
